# embedded_system_2024-2025

./: abc.py  camera_loop.py  door_control.py  embedding_face.py  face_camera.py  face_detector.py  face_spoof_detector.py  face_utils.py  log_sender.py  main.py  pyproject.toml  receive_server_message.py  settings.py  test.py  test_api.py
data/embeddings/: known_faces_embeddings_tflite.pkl
test/: test_api.py  test_stream.py
